fixed hero section mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-@media (min-width: 1200px) {
-  h1 {
-    font-size: 4rem;
-  }
-}
